cloud-kube/ingress/eureka-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eureka-ingress
  annotations:
   # ingress.kubernetes.io/app-root: /eureka
#    ingress.kubernetes.io/rewrite-target: /eureka
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  namespace: twinkle
spec:
  rules:
  - host: eureka.twinkle.net
    http:
      paths:
      - path: /
        backend:
          serviceName: discovery
          servicePort: 8761
