cloud-kube/ingress/kube-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  namespace: twinkle
spec:
#  tls:
#  - secretName: kubernetes-dashboard-certs
  rules:
  - host: kube.gemii.cc
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-dashboard
          servicePort: 9443
