cloud-kube/ingress/ui-admin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  namespace: twinkle
spec:
  rules:
  - host: admin.twinkle.net
    http:
      paths:
      - path: /twinkle/api
        backend:
          serviceName: gateway
          servicePort: 10000
      - path: /twinkle/fs
        backend:
          serviceName: gridfs
          servicePort: 9041
      - path: /
        backend:
          serviceName: ui-admin
          servicePort: 8000
